# DofusSwitcher

./: .gitignore  Cargo.toml  README.md  build.rs
src/: actions.rs  gui.rs  main.rs  state.rs  win_api.rs
